--- a/index.html
+++ b/index.html
@@ -11,83 +11,82 @@
     <title>Merlin's Potions</title>
     <!-- IMPORTS -->
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- /IMPORTS -->
 </head>
 
 <body>
+
     <!-- NAVBAR-->
     <!-- Top view -->
-
-    <!-- offcanvas menu -->
-
-    <div class="offcanvas-menu js-offcanvas-menu">
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-item"><a href="">Potions</a></li>
-                <li class="nav-item"><a href="">Ingredients</a></li>
-                <li class="nav-item"><a href="">Books</a></li>
-                <li class="nav-item"><a href="">Supplies</a></li>
-                <li class="nav-item"><a href="">Charms</a></li>
-                <li class="nav-item"><a href="">Clearance!</a></li>
-                <li class="nav-item"><a href="">Sign In</a></li>
-                <!-- <li class="nav-item"><a href="">Sign Up</a></li> -->
-            </ul>
-        </nav>
+    <div class="top-nav">
+        <div class="logo">Merlin's Potions</div>
+        <form action="#">
+            <input id="search" type="search" class="search-data" placeholder="Search" required>
+            <button type="submit" class="fas fa-search"></button>
+        </form>
     </div>
-    <!-- offcanvas menu -->
-    <nav>
-        <ul class="nav-search-main">
-            <li class="nav-search-item"><img src="" alt="Logo da empresa"></li>
-            <li class="nav-search-item"><a href="">Search</a></li>
-        </ul>
-    </nav>
-
     <!-- /Top view -->
     <!-- Nav view -->
-    <header>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-item"><a href="">Potions</a></li>
-                <li class="nav-item"><a href="">Ingredients</a></li>
-                <li class="nav-item"><a href="">Books</a></li>
-                <li class="nav-item"><a href="">Supplies</a></li>
-                <li class="nav-item"><a href="">Charms</a></li>
-                <li class="nav-item"><a href="">Clearance!</a></li>
-                <li class="nav-item"><a href="">Sign In</a></li>
-                <!-- <li class="nav-item"><a href="">Sign Up</a></li> -->
-                <button class="offcanvas-button js-trigger">offcanvas</button>
-            </ul>
-        </nav>
 
+    <nav>
+        <div class="menu-icon">
+            <span class="fas fa-bars"></span>
+        </div>
+        <div class="nav-items">
+            <li><a href="">Potions</a></li>
+            <li><a href="">Ingredients</a></li>
+            <li><a href="">Books</a></li>
+            <li><a href="">Supplies</a></li>
+            <li><a href="">Charms</a></li>
+            <li><a href="">Clearance!</a></li>
+            <li><a href="">Sign In</a></li>
+        </div>
+        <div class="search-icon"><span class="fas fa-search"></span></div>
+        <div class="cancel-icon"><span class="fas fa-times"></span></div>
+    </nav>
 
-    </header>
     <!-- /Nav view -->
     <!-- /NAVBAR -->
     <!-- CONTENT -->
-    <div class="wrapper-grid">
-        <div id="potions">
-            <section v-if="errored">
-                <p>Pedimos desculpas, não estamos conseguindo recuperar as informações no momento. Por favor, tente
-                    novamente mais tarde.</p>
-            </section>
-            <div v-else>
-                <div v-for="(potion, index) in potions_list" :key="index">
-                    <div class="img"></div>
-                    <h1>{{potion.name}}</h1>
-                    <!-- <p>{{potion.effect}}</p> -->
-                    <p>{{potion.price}}</p>
-                    <!-- <div v-for="(ingredient, index) in potion.ingredients" :key="index">
-                        <ul>{{ingredient}}</ul>
-                    </div> -->
-                </div>
+    <div class="main">
+        <div>
+            <!-- image gallery -->
+            <h1 class="gallery-title">Potions</h1>
+            <div class="gallery">
+
+                <a href="./img/products/aging-potion.png"><img class="gallery-img" src="./img/products/aging-potion.png"
+                        alt="Aging Potion"></a>
+
+                <a href="./img/products/bulgeye-potion.png"><img class="gallery-img"
+                        src="./img/products/bulgeye-potion.png" alt="Bulgeye Potion"></a>
+                <a href="./img/products/dragon-tonic.png"><img class="gallery-img" src="./img/products/dragon-tonic.png"
+                        alt="Dragon Tonic"></a>
+                <a href="./img/products/love-potion.png"><img class="gallery-img" src="./img/products/love-potion.png"
+                        alt="Love Potion"></a>
+                <a href="./img/products/polyjuice-potion.png"><img class="gallery-img"
+                        src="./img/products/polyjuice-potion.png" alt="Polyjuice Potion"></a>
+                <a href="./img/products/sleeping-draught.png"><img class="gallery-img"
+                        src="./img/products/sleeping-draught.png" alt="Sleeping Draught"></a>
             </div>
+            <!-- /image gallery -->
+
         </div>
     </div>
+    <footer>
+        <h1>Footer here</h1>
+    </footer>
     <!-- /CONTENT -->
     <!-- JS -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-    <script src="./js/app.js" defer></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- arquivo para uso do vue + axios com get da api -->
+    <script src="./js/app.js"></script>
+    <!-- JQuery -->
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <!-- Magnific -->
+    <script src="./js/jquery.magnific-popup.min.js"></script>
+    <!-- arquivo js -->
     <script src="./js/main.js"></script>
     <!-- /JS -->
 </body>
