navbar desktop + mobile done

--- a/index.html
+++ b/index.html
@@ -18,35 +18,23 @@
 <body>
 
     <!-- NAVBAR-->
-    <!-- Top view -->
-    <div class="top-nav">
-        <div class="logo">Merlin's Potions</div>
-        <form action="#">
-            <input id="search" type="search" class="search-data" placeholder="Search" required>
-            <button type="submit" class="fas fa-search"></button>
-        </form>
-    </div>
-    <!-- /Top view -->
-    <!-- Nav view -->
-
     <nav>
         <div class="menu-icon">
-            <span class="fas fa-bars"></span>
-        </div>
+            <span class="fas fa-bars"></span></div>
+        <div class="logo">
+            Merlin's Potions</div>
         <div class="nav-items">
-            <li><a href="">Potions</a></li>
-            <li><a href="">Ingredients</a></li>
-            <li><a href="">Books</a></li>
-            <li><a href="">Supplies</a></li>
-            <li><a href="">Charms</a></li>
-            <li><a href="">Clearance!</a></li>
-            <li><a href="">Sign In</a></li>
+            <li><a href="#">Potions</a></li>
+            <li><a href="#">Ingredients</a></li>
+            <li><a href="#">Books</a></li>
+            <li><a href="#">Supplies</a></li>
+            <li><a href="#">Clearance</a></li>
+            <li><a href="#">Signin</a></li>
         </div>
-        <div class="search-icon"><span class="fas fa-search"></span></div>
-        <div class="cancel-icon"><span class="fas fa-times"></span></div>
-    </nav>
 
-    <!-- /Nav view -->
+        <div class="cancel-icon">
+            <span class="fas fa-times"></span></div>
+    </nav>
     <!-- /NAVBAR -->
     <!-- CONTENT -->
     <div class="main">
