adicao do icone - agora sim commit final

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="INDEX,FOLLOW" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <link rel="shortcut icon" href="./img/icon/potion.svg" type="image/x-icon">
     <title>Merlin's Potions</title>
     <!-- IMPORTS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -73,12 +74,7 @@
             </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <!-- FOOTER -->
     <footer>
         <div class="footer-container">
