agora sim commit final de verdade

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="border"></div>
                 <p>Sign up for our newsletter & get exclusive discounts!</p>
                 <form action="" class="newsletter-form">
-                    <input type="text" class="txtb" placeholder="Enter Your Email">
+                    <input type="text" class="txtb" placeholder="Enter Your Email" required>
                     <input type="submit" class="btn-newsletter" value="submit">
                 </form>
             </div>
